--- a/MimiFUND-MimiFAIR-Flat.ipynb
+++ b/MimiFUND-MimiFAIR-Flat.ipynb
@@ -11,7 +11,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This notebook implements a coupling of the MimiFAIR model and the MimiFUND model."
+    "This notebook implements a coupling of the MimiFAIR model and the MimiFUND model. At a high-level, the goal here is to use the MimiFAIR model as the climate module, and the MimiFUND model as the socioeconomic and damages modules, although in this case we still allow MimiFUND's climate module to take care of the modeling of non-CO₂ gases like methane.  \n",
+    "\n",
+    "This is meant to be an instructional example for the use-case of Mimi where a user wishes to couple together existing models.\n",
+    "\n",
+    "Resources for further inquiries include:\n",
+    "\n",
+    "- The Mimi framework [website](https://www.mimiframework.org)\n",
+    "- The Mimi [forum](https://forum.mimiframework.org) for technical and Mimi-related questions\n",
+    "- The model-specific repositories, [MimiFUND](https://github.com/fund-model/MimiFUND.jl) and [MimiFAIR](https://github.com/anthofflab/mimi-fair.jl/) for model-specific inquiries\n",
+    "\n",
+    "If you wish to follow alone, feel free to download or clone the Github repository, or create a new project on your own machine. If you are new to Mimi, you will probably want to start with our basic Mimi installation process as described in our documentation [here](https://www.mimiframework.org/Mimi.jl/stable/tutorials/tutorial_1/#Tutorial-1:-Install-Mimi-1)."
    ]
   },
   {
@@ -30,27 +40,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[32m\u001b[1m      Status\u001b[22m\u001b[39m `~/JuliaProjects/MimiFUND-MimiFAIR-Flat.jl/Project.toml`\n",
-      " \u001b[90m [5d742f6a] \u001b[39m\u001b[37mCSVFiles v1.0.0\u001b[39m\n",
-      " \u001b[90m [a93c6f00] \u001b[39m\u001b[37mDataFrames v0.22.7\u001b[39m\n",
-      " \u001b[90m [e4e893b0] \u001b[39m\u001b[37mMimi v1.2.2-DEV `https://github.com/mimiframework/Mimi.jl.git#master`\u001b[39m\n",
-      " \u001b[90m [73d86c50] \u001b[39m\u001b[37mMimiFAIR v1.0.1\u001b[39m\n",
-      " \u001b[90m [b3ba11de] \u001b[39m\u001b[37mMimiFUND v3.12.0\u001b[39m\n",
-      " \u001b[90m [112f6efa] \u001b[39m\u001b[37mVegaLite v2.4.0\u001b[39m\n"
-     ]
-    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
       "\u001b[32m\u001b[1m  Activating\u001b[22m\u001b[39m environment at `~/JuliaProjects/MimiFUND-MimiFAIR-Flat.jl/Project.toml`\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32m\u001b[1m      Status\u001b[22m\u001b[39m `~/JuliaProjects/MimiFUND-MimiFAIR-Flat.jl/Project.toml`\n",
+      " \u001b[90m [5d742f6a] \u001b[39m\u001b[37mCSVFiles v1.0.1\u001b[39m\n",
+      " \u001b[90m [a93c6f00] \u001b[39m\u001b[37mDataFrames v0.22.7\u001b[39m\n",
+      " \u001b[90m [e4e893b0] \u001b[39m\u001b[37mMimi v1.2.2\u001b[39m\n",
+      " \u001b[90m [73d86c50] \u001b[39m\u001b[37mMimiFAIR v1.0.1\u001b[39m\n",
+      " \u001b[90m [b3ba11de] \u001b[39m\u001b[37mMimiFUND v3.12.1\u001b[39m\n",
+      " \u001b[90m [112f6efa] \u001b[39m\u001b[37mVegaLite v2.6.0\u001b[39m\n"
      ]
     }
    ],
@@ -64,12 +74,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Note that if you are following along on your own machine without downloading this repository, you can recreate this environment by adding each of the packages listed above with `Pkg.add()`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# using Pkg\n",
+    "# Pkg.add(\"CSVFiles\")\n",
+    "# Pkg.add(\"DataFrames\")\n",
+    "# Pkg.add(\"Mimi\")\n",
+    "# Pkg.add(\"MimiFAIR\")\n",
+    "# Pkg.add(\"MimiFUND\")\n",
+    "# Pkg.add(\"VegaLite\")\n",
+    "\n",
+    "# Pkg.status()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Next we load the packages whose APIs we will be directly using as well as set some constants to be used in the script."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +219,7 @@
        "  Built: false\n"
       ]
      },
-     "execution_count": 145,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -203,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +274,7 @@
        "  Symbol(\"5\") => [1, 2, 3, 4, 5]"
       ]
      },
-     "execution_count": 147,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -258,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -272,7 +306,7 @@
        "  :ozone_depleting_substances => [\"CFC_11\", \"CFC_12\", \"CFC_113\", \"CFC_114\", \"CF…"
       ]
      },
-     "execution_count": 148,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -291,7 +325,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The final dimensions-related is to expand the time dimension of the model.  At this stage, our model runs on FUND's default time dimension 1950 to 3000 (`FUND_first` to `FUND_last`).  FAIR, however, runs from 1765 to 2500 (`FAIR_first` to `FAIR_last`) so we are going to set our model to run from 1765 to 2500.\n",
+    "The final dimensions-related step is to expand the time dimension of the model.  At this stage, our model runs on FUND's default time dimension 1950 to 3000 (`FUND_first` to `FUND_last`).  FAIR, however, runs from 1765 to 2500 (`FAIR_first` to `FAIR_last`) so we are going to set our model to run from 1765 to 2500.\n",
     "\n",
     "FUND will not start running until 1950, and will not produce an `emissions` value until 1951, so up until 1951 FAIR will use `backup` values pulled from default FUND as we will describe in detail below.\n",
     "\n",
@@ -300,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -314,7 +348,7 @@
        "  :ozone_depleting_substances => [\"CFC_11\", \"CFC_12\", \"CFC_113\", \"CFC_114\", \"CF…"
       ]
      },
-     "execution_count": 149,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -343,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -375,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -429,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -452,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -481,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -496,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -523,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -538,20 +572,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Electron.Window(Application(Base.PipeEndpoint(RawFD(53) paused, 0 bytes waiting), Process(`\u001b[4m/Users/lisarennels/.julia/artifacts/3ba739a4ed073587d96415faecef10a5ccea63ba/Julia.app/Contents/MacOS/Julia\u001b[24m \u001b[4m/Users/lisarennels/.julia/packages/Electron/ILvWR/src/main.js\u001b[24m \u001b[4m/var/folders/1w/jm1h6fwj0t536vld2gxj7kzr0000gn/T/jlel-f39fe9fea7bc11eb27a1f715f129b0e9\u001b[24m \u001b[4m/var/folders/1w/jm1h6fwj0t536vld2gxj7kzr0000gn/T/jlel-sn-f39ff13aa7bc11eb3c07c7f082bc2ad3\u001b[24m \u001b[4mvmTUnA9kap8ecMeOOU6wLxdHg9ebgg2lJgTp9sfkaXpqEDxtZYH5hQFJCGDtSY2uyZ2upwCBNXIJOD34Q9vxg5hhf50nx87M5TlqGgkCqKyEIWFFx7oSci6XFqnMJ+fOCkWK0kkRUWIH1rfIH8EoqMBZnr5RoMZq9VNZH24PPko=\u001b[24m`, ProcessRunning), [1 window]), 1, true, Channel{Any}(128))"
-      ]
-     },
-     "execution_count": 157,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "explore(m)"
    ]
@@ -572,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -589,7 +612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
