Udpate notebook grpahics

--- a/MimiFUND-MimiFAIR-Flat.ipynb
+++ b/MimiFUND-MimiFAIR-Flat.ipynb
@@ -454,7 +454,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "First we need to add a `multiplier` component between FUND's `emissions` component and the FAIR components because FUND outputs Mtons of CO₂ but FAIR expects Gtons of CO₂.\n",
+    "First we need to add a `multiplier` component between FUND's `emissions` component and the FAIR components because FUND outputs Mtons of C but FAIR expects Gtons of C. **Note that these models expect C instead of CO₂, which is endogenous to the model so we must align with those**.\n",
     "\n",
     "Mimi has a few built in components for this type of situation, including `Mimi.multiplier`, as decribed [here](https://www.mimiframework.org/Mimi.jl/stable/tutorials/tutorial_3/#Component-and-Structural-Modifications:-The-API-1).  \n",
     "\n",
@@ -580,7 +580,7 @@
     {
      "data": {
       "text/plain": [
-       "Electron.Window(Application(Base.PipeEndpoint(RawFD(53) paused, 0 bytes waiting), Process(`\u001b[4m/Users/lisarennels/.julia/artifacts/3ba739a4ed073587d96415faecef10a5ccea63ba/Julia.app/Contents/MacOS/Julia\u001b[24m \u001b[4m/Users/lisarennels/.julia/packages/Electron/ILvWR/src/main.js\u001b[24m \u001b[4m/var/folders/1w/jm1h6fwj0t536vld2gxj7kzr0000gn/T/jlel-0b06b96adeae11eb3184513e7be9f7f5\u001b[24m \u001b[4m/var/folders/1w/jm1h6fwj0t536vld2gxj7kzr0000gn/T/jlel-sn-0b07166cdeae11eb264925deb11c1c5e\u001b[24m \u001b[4mnQ/W1wtcyIsDTSblbdW1H1KUNKloqqLDKcrvI6lyyagwvYmW659lMFMxGB5ZhJpBdAbWMkYW9a0Z6JNoT6Xlgf+ORqLNLKxlEWe5BuG3DpZDeo583/y+L9Q28UdfV98fDyRyc7SY0GhmcutWMsB44c2c6Y7rqvKOtwv1ckyNz+4=\u001b[24m`, ProcessRunning), [1 window]), 1, true, Channel{Any}(128))"
+       "Electron.Window(Application(Base.PipeEndpoint(RawFD(53) paused, 0 bytes waiting), Process(`\u001b[4m/Users/lisarennels/.julia/artifacts/3ba739a4ed073587d96415faecef10a5ccea63ba/Julia.app/Contents/MacOS/Julia\u001b[24m \u001b[4m/Users/lisarennels/.julia/packages/Electron/ILvWR/src/main.js\u001b[24m \u001b[4m/var/folders/1w/jm1h6fwj0t536vld2gxj7kzr0000gn/T/jlel-9b9b29d2deb511eb1d5aff9fefbabc00\u001b[24m \u001b[4m/var/folders/1w/jm1h6fwj0t536vld2gxj7kzr0000gn/T/jlel-sn-9b9b79dadeb511eb15d77db571017392\u001b[24m \u001b[4mVXek2G18giFo1CtUdUXGHM2NAsIB3vQu6W5tu9wvbA6quVOCz515TO0Aaxr2CPyxFp9O2OY8z3kQHoEI/TVJOvy5DpTkmq45grLuqqORQlj/67i5QDz6KzCKyQqG/1FDfNEqm4RZ5vhGSu2jk0uDTUsVFrD8NamvTPi4vcItqls=\u001b[24m`, ProcessRunning), [1 window]), 1, true, Channel{Any}(128))"
       ]
      },
      "execution_count": 18,
@@ -19230,7 +19230,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Annual Emissions"
+    "##### Annual Carbon Dioxide Emissions (GtC yr⁻¹)"
    ]
   },
   {
@@ -26653,8 +26653,6 @@
     }
    ],
    "source": [
-    "# annual emissions\n",
-    "\n",
     "fairvals = mfair[:co2_cycle, :E_CO₂]\n",
     "fundfairvals =  m[:co2_cycle, :E_CO₂]\n",
     "\n",
@@ -26676,6 +26674,15 @@
   {
    "cell_type": "code",
    "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "##### Global Carbon Dioxide Emissions (MtC yr⁻¹)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -34087,14 +34094,12 @@
        ")"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# cumulative emissions\n",
-    "\n",
     "fundfairvals =  m[:emissions, :cumglobco2]\n",
     "fundvals = vcat(\n",
     "    fill(missing, length(FAIR_first:FUND_first)-1),\n",
@@ -34119,7 +34124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -37108,7 +37113,7 @@
        ")"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -37128,7 +37133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -37158,7 +37163,7 @@
        " 569121.9122214211"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
