Finish adding FAIR162

--- a/MimiFUND-MimiFAIR162-Flat.ipynb
+++ b/MimiFUND-MimiFAIR162-Flat.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Implementation of MimiFAIR-MimiFUND"
+    "## Implementation of MimiFAIR162-MimiFUND"
    ]
   },
   {
@@ -56,10 +56,12 @@
      "text": [
       "\u001b[32m\u001b[1m      Status\u001b[22m\u001b[39m `~/JuliaProjects/MimiModels/MimiFUND-MimiFAIR-Flat.jl/Project.toml`\n",
       " \u001b[90m [5d742f6a] \u001b[39m\u001b[37mCSVFiles v1.0.1\u001b[39m\n",
-      " \u001b[90m [a93c6f00] \u001b[39m\u001b[37mDataFrames v1.2.0\u001b[39m\n",
-      " \u001b[90m [e4e893b0] \u001b[39m\u001b[37mMimi v1.3.0\u001b[39m\n",
+      " \u001b[90m [a93c6f00] \u001b[39m\u001b[37mDataFrames v1.2.2\u001b[39m\n",
+      " \u001b[90m [e4e893b0] \u001b[39m\u001b[37mMimi v1.3.3\u001b[39m\n",
       " \u001b[90m [73d86c50] \u001b[39m\u001b[37mMimiFAIR v1.0.2\u001b[39m\n",
+      " \u001b[90m [02cc1f66] \u001b[39m\u001b[37mMimiFAIRv1_6_2 v0.1.0 `https://github.com/FrankErrickson/MimiFAIRv1_6_2.jl.git#main`\u001b[39m\n",
       " \u001b[90m [b3ba11de] \u001b[39m\u001b[37mMimiFUND v3.13.0\u001b[39m\n",
+      " \u001b[90m [91a5bcdd] \u001b[39m\u001b[37mPlots v1.22.6\u001b[39m\n",
       " \u001b[90m [112f6efa] \u001b[39m\u001b[37mVegaLite v2.6.0\u001b[39m\n"
      ]
     }
@@ -107,9 +109,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "using MimiFAIR\n",
+    "using MimiFAIRv1_6_2\n",
     "using MimiFUND\n",
-    "using Mimi"
+    "using Mimi\n"
    ]
   },
   {
@@ -149,17 +151,29 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "351"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "rcp = \"RCP85\"\n",
+    "# set some constants\n",
+    "ar6_scenario = \"ssp585\"\n",
     "\n",
-    "FAIR_first = 1765\n",
-    "FAIR_last = 2500\n",
+    "FAIR_first = 1750\n",
+    "FAIR_last = 2300\n",
     "FAIR_len = length(FAIR_first:FAIR_last)\n",
     "\n",
     "FUND_first = 1950\n",
-    "FUND_last = 2500\n",
-    "FUND_len = length(FUND_first:FUND_last);"
+    "FUND_last = 2300\n",
+    "FUND_len = length(FUND_first:FUND_last)"
    ]
   },
   {
@@ -241,9 +255,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import MimiFAIR: ch4_cycle, n2o_cycle, other_ghg_cycles, co2_cycle, ch4_rf, \n",
-    "    n2o_rf, other_ghg_rf, co2_rf, trop_o3_rf, strat_o3_rf, aerosol_direct_rf, \n",
-    "    aerosol_indirect_rf, bc_snow_rf, landuse_rf, contrails_rf, total_rf, temperature;"
+    "# import MimiFAIRv1_6_2 components \n",
+    "import MimiFAIRv1_6_2: ch4_cycle, n2o_cycle, other_ghg_cycles, co2_cycle, ch4_forcing, o3_forcing,\n",
+    "    n2o_forcing, other_ghg_forcing, other_ghg_cycles, co2_forcing, o3_depleting_substance_cycles, o3_depleting_substance_forcing, aerosol_direct_forcing, \n",
+    "    aerosol_indirect_forcing, bc_snow_forcing, landuse_forcing, contrails_forcing, total_forcing, temperature \n"
    ]
   },
   {
@@ -312,8 +327,10 @@
     }
    ],
    "source": [
-    "other_ghg_names = [\"CF4\", \"C2F6\", \"C6F14\", \"HFC23\", \"HFC32\", \"HFC43_10\", \"HFC125\", \"HFC134a\", \"HFC143a\", \"HFC227ea\", \"HFC245fa\", \"SF6\", \"CFC_11\", \"CFC_12\", \"CFC_113\", \"CFC_114\", \"CFC_115\", \"CARB_TET\", \"MCF\", \"HCFC_22\", \"HCFC_141B\", \"HCFC_142B\", \"HALON1211\", \"HALON1202\", \"HALON1301\", \"HALON2402\", \"CH3BR\", \"CH3CL\"]\n",
-    "ods_names = [\"CFC_11\", \"CFC_12\", \"CFC_113\", \"CFC_114\", \"CFC_115\", \"CARB_TET\", \"MCF\", \"HCFC_22\", \"HCFC_141B\", \"HCFC_142B\", \"HALON1211\", \"HALON1202\", \"HALON1301\", \"HALON2402\", \"CH3BR\", \"CH3CL\"]\n",
+    "# add new dimensions relevant to FAIR (1) minor greenhouse gases and \n",
+    "# (2) ozone-depleting substances\n",
+    "other_ghg_names = [\"CF4\", \"C2F6\", \"C6F14\", \"HFC23\", \"HFC32\", \"HFC43_10\", \"HFC125\", \"HFC134a\", \"HFC143a\", \"HFC227ea\", \"HFC245fa\", \"SF6\"]\n",
+    "ods_names       = [\"CFC_11\", \"CFC_12\", \"CFC_113\", \"CFC_114\", \"CFC_115\", \"CARB_TET\", \"MCF\", \"HCFC_22\", \"HCFC_141B\", \"HCFC_142B\", \"HALON1211\", \"HALON1202\", \"HALON1301\", \"HALON2402\", \"CH3BR\", \"CH3CL\"]\n",
     "\n",
     "set_dimension!(m, :other_ghg, other_ghg_names) # FAIR dims - Set index for Kyoto and ozone ozone-depleting gases.\n",
     "set_dimension!(m, :ozone_depleting_substances, ods_names) # FAIR dims - Set index for Kyoto and ozone ozone-depleting gases.\n",
@@ -341,7 +358,7 @@
      "data": {
       "text/plain": [
        "OrderedCollections.OrderedDict{Symbol, Union{Nothing, Mimi.Dimension}} with 5 entries:\n",
-       "  :time                       => [1765, 1766, 1767, 1768, 1769, 1770, 1771, 177…\n",
+       "  :time                       => [1750, 1751, 1752, 1753, 1754, 1755, 1756, 175…\n",
        "  :regions                    => [\"USA\", \"CAN\", \"WEU\", \"JPK\", \"ANZ\", \"EEU\", \"FS…\n",
        "  Symbol(\"5\")                 => [1, 2, 3, 4, 5]\n",
        "  :other_ghg                  => [\"CF4\", \"C2F6\", \"C6F14\", \"HFC23\", \"HFC32\", \"HF…\n",
@@ -383,21 +400,22 @@
    "source": [
     "add_comp!(m, ch4_cycle; after = :emissions);\n",
     "add_comp!(m, n2o_cycle; after = :ch4_cycle);\n",
-    "add_comp!(m, other_ghg_cycles; after = :n2o_cycle);\n",
-    "add_comp!(m, co2_cycle; after = :other_ghg_cycles);\n",
-    "add_comp!(m, ch4_rf; after = :co2_cycle);\n",
-    "add_comp!(m, n2o_rf; after = :ch4_rf);\n",
-    "add_comp!(m, other_ghg_rf; after = :n2o_rf);\n",
-    "add_comp!(m, co2_rf; after = :other_ghg_rf);\n",
-    "add_comp!(m, trop_o3_rf; after = :co2_rf);\n",
-    "add_comp!(m, strat_o3_rf; after = :trop_o3_rf);\n",
-    "add_comp!(m, aerosol_direct_rf; after = :strat_o3_rf);\n",
-    "add_comp!(m, aerosol_indirect_rf; after = :aerosol_direct_rf);\n",
-    "add_comp!(m, bc_snow_rf; after = :aerosol_indirect_rf);\n",
-    "add_comp!(m, landuse_rf; after = :bc_snow_rf);\n",
-    "add_comp!(m, contrails_rf; after = :landuse_rf);\n",
-    "add_comp!(m, total_rf; after = :contrails_rf);\n",
-    "add_comp!(m, temperature; after = :total_rf);"
+    "add_comp!(m, co2_cycle; after = :n2o_cycle);\n",
+    "add_comp!(m, other_ghg_cycles; after = :co2_cycle);\n",
+    "add_comp!(m, o3_depleting_substance_cycles; after = :other_ghg_cycles);\n",
+    "add_comp!(m, co2_forcing; after = :o3_depleting_substance_cycles);\n",
+    "add_comp!(m, ch4_forcing; after = :co2_forcing);\n",
+    "add_comp!(m, n2o_forcing; after = :ch4_forcing);\n",
+    "add_comp!(m, o3_forcing; after = :n2o_forcing);\n",
+    "add_comp!(m, aerosol_direct_forcing; after = :o3_forcing);\n",
+    "add_comp!(m, aerosol_indirect_forcing; after = :aerosol_direct_forcing);\n",
+    "add_comp!(m, other_ghg_forcing; after = :aerosol_indirect_forcing);\n",
+    "add_comp!(m, o3_depleting_substance_forcing; after = :other_ghg_forcing);\n",
+    "add_comp!(m, contrails_forcing; after = :o3_depleting_substance_forcing);\n",
+    "add_comp!(m, bc_snow_forcing; after = :contrails_forcing);\n",
+    "add_comp!(m, landuse_forcing; after = :bc_snow_forcing);\n",
+    "add_comp!(m, total_forcing; after = :landuse_forcing);\n",
+    "add_comp!(m, temperature; after = :total_forcing);"
    ]
   },
   {
@@ -411,9 +429,17 @@
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ssp585\n"
+     ]
+    }
+   ],
    "source": [
-    "update_MimiFAIR_params!(m; rcp_scenario = rcp, start_year = FAIR_first, end_year = FAIR_last)"
+    "update_MimiFAIR162_params!(m; start_year = FAIR_first, end_year = FAIR_last, ar6_scenario = ar6_scenario)"
    ]
   },
   {
@@ -468,7 +494,7 @@
    "outputs": [],
    "source": [
     "add_comp!(m, Mimi.multiplier; after = :emissions, first = FUND_first, last = FUND_last);\n",
-    "update_param!(m, :multiplier, :multiply, fill(1/1000, FAIR_len))\n",
+    "set_param!(m, :multiplier, :multiply, fill(1/1000, FAIR_len)) # convert Mtons C coming out of FUND to Gtons C going into FAIR\n",
     "connect_param!(m, :multiplier, :input, :emissions, :mco2)"
    ]
   },
@@ -486,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -494,9 +520,13 @@
     "# previous source: exogenous parameter\n",
     "# new source: FUND :emissions variable :mco2 (which first runs through the multiplier component)\n",
     "\n",
-    "rcp_emissions, volcano_forcing, solar_forcing, gas_data, gas_fractions, conversions = MimiFAIR.load_fair_data(FAIR_first, FAIR_last, rcp);\n",
-    "FAIR_CO₂_backup = (rcp_emissions.FossilCO2 .+ rcp_emissions.OtherCO2)\n",
-    "connect_param!(m, :co2_cycle, :E_CO₂, :multiplier, :output, FAIR_CO₂_backup, backup_offset = 1)"
+    "# Subset AR6 emissions to proper years.\n",
+    "ar6_emissions_raw = DataFrame(load(joinpath(@__DIR__, \"data\", \"model_data\", \"AR6_emissions_\"*ar6_scenario*\"_1750_2300.csv\")))\n",
+    "emission_indices = indexin(collect(FAIR_first:FAIR_last), ar6_emissions_raw.Year)\n",
+    "ar6_emissions = ar6_emissions_raw[emission_indices, :]\n",
+    "\n",
+    "FAIR_CO₂_backup = (ar6_emissions.FossilCO2 .+ ar6_emissions.OtherCO2)\n",
+    "connect_param!(m, :co2_cycle, :E_co2, :multiplier, :output, FAIR_CO₂_backup, backup_offset = 1)"
    ]
   },
   {
@@ -515,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -530,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -557,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {
     "scrolled": false
    },
@@ -568,7 +598,7 @@
     "mfund = MimiFUND.get_model()\n",
     "run(mfund)\n",
     "\n",
-    "mfair = MimiFAIR.get_model()\n",
+    "mfair = MimiFAIRv1_6_2.get_model(;start_year = FAIR_first, end_year = FAIR_last, ar6_scenario = ar6_scenario)\n",
     "run(mfair)"
    ]
   },
@@ -26641,8 +26671,8 @@
     }
    ],
    "source": [
-    "fairvals = mfair[:co2_cycle, :E_CO₂]\n",
-    "fundfairvals =  m[:co2_cycle, :E_CO₂]\n",
+    "fairvals = mfair[:co2_cycle, :E_co2]\n",
+    "fundfairvals =  m[:co2_cycle, :E_co2]\n",
     "\n",
     "df = DataFrame(\n",
     "    :Year => Mimi.time_labels(m),\n",
