Make various cleanup changes

--- a/MimiFUND-MimiFAIR-Flat.ipynb
+++ b/MimiFUND-MimiFAIR-Flat.ipynb
@@ -56,10 +56,12 @@
      "text": [
       "\u001b[32m\u001b[1m      Status\u001b[22m\u001b[39m `~/JuliaProjects/MimiModels/MimiFUND-MimiFAIR-Flat.jl/Project.toml`\n",
       " \u001b[90m [5d742f6a] \u001b[39m\u001b[37mCSVFiles v1.0.1\u001b[39m\n",
-      " \u001b[90m [a93c6f00] \u001b[39m\u001b[37mDataFrames v1.2.0\u001b[39m\n",
-      " \u001b[90m [e4e893b0] \u001b[39m\u001b[37mMimi v1.3.0\u001b[39m\n",
+      " \u001b[90m [a93c6f00] \u001b[39m\u001b[37mDataFrames v1.2.2\u001b[39m\n",
+      " \u001b[90m [e4e893b0] \u001b[39m\u001b[37mMimi v1.3.3\u001b[39m\n",
       " \u001b[90m [73d86c50] \u001b[39m\u001b[37mMimiFAIR v1.0.2\u001b[39m\n",
+      " \u001b[90m [02cc1f66] \u001b[39m\u001b[37mMimiFAIRv1_6_2 v0.1.0 `https://github.com/FrankErrickson/MimiFAIRv1_6_2.jl.git#main`\u001b[39m\n",
       " \u001b[90m [b3ba11de] \u001b[39m\u001b[37mMimiFUND v3.13.0\u001b[39m\n",
+      " \u001b[90m [91a5bcdd] \u001b[39m\u001b[37mPlots v1.22.6\u001b[39m\n",
       " \u001b[90m [112f6efa] \u001b[39m\u001b[37mVegaLite v2.6.0\u001b[39m\n"
      ]
     }
@@ -232,24 +234,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We will now import each of the individual FAIR components."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import MimiFAIR: ch4_cycle, n2o_cycle, other_ghg_cycles, co2_cycle, ch4_rf, \n",
-    "    n2o_rf, other_ghg_rf, co2_rf, trop_o3_rf, strat_o3_rf, aerosol_direct_rf, \n",
-    "    aerosol_indirect_rf, bc_snow_rf, landuse_rf, contrails_rf, total_rf, temperature;"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### Add and Update Dimensions"
    ]
   },
@@ -381,23 +365,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "add_comp!(m, ch4_cycle; after = :emissions);\n",
-    "add_comp!(m, n2o_cycle; after = :ch4_cycle);\n",
-    "add_comp!(m, other_ghg_cycles; after = :n2o_cycle);\n",
-    "add_comp!(m, co2_cycle; after = :other_ghg_cycles);\n",
-    "add_comp!(m, ch4_rf; after = :co2_cycle);\n",
-    "add_comp!(m, n2o_rf; after = :ch4_rf);\n",
-    "add_comp!(m, other_ghg_rf; after = :n2o_rf);\n",
-    "add_comp!(m, co2_rf; after = :other_ghg_rf);\n",
-    "add_comp!(m, trop_o3_rf; after = :co2_rf);\n",
-    "add_comp!(m, strat_o3_rf; after = :trop_o3_rf);\n",
-    "add_comp!(m, aerosol_direct_rf; after = :strat_o3_rf);\n",
-    "add_comp!(m, aerosol_indirect_rf; after = :aerosol_direct_rf);\n",
-    "add_comp!(m, bc_snow_rf; after = :aerosol_indirect_rf);\n",
-    "add_comp!(m, landuse_rf; after = :bc_snow_rf);\n",
-    "add_comp!(m, contrails_rf; after = :landuse_rf);\n",
-    "add_comp!(m, total_rf; after = :contrails_rf);\n",
-    "add_comp!(m, temperature; after = :total_rf);"
+    "add_comp!(m, MimiFAIR.ch4_cycle; after = :emissions);\n",
+    "add_comp!(m, MimiFAIR.n2o_cycle; after = :ch4_cycle);\n",
+    "add_comp!(m, MimiFAIR.other_ghg_cycles; after = :n2o_cycle);\n",
+    "add_comp!(m, MimiFAIR.co2_cycle; after = :other_ghg_cycles);\n",
+    "add_comp!(m, MimiFAIR.ch4_rf; after = :co2_cycle);\n",
+    "add_comp!(m, MimiFAIR.n2o_rf; after = :ch4_rf);\n",
+    "add_comp!(m, MimiFAIR.other_ghg_rf; after = :n2o_rf);\n",
+    "add_comp!(m, MimiFAIR.co2_rf; after = :other_ghg_rf);\n",
+    "add_comp!(m, MimiFAIR.trop_o3_rf; after = :co2_rf);\n",
+    "add_comp!(m, MimiFAIR.strat_o3_rf; after = :trop_o3_rf);\n",
+    "add_comp!(m, MimiFAIR.aerosol_direct_rf; after = :strat_o3_rf);\n",
+    "add_comp!(m, MimiFAIR.aerosol_indirect_rf; after = :aerosol_direct_rf);\n",
+    "add_comp!(m, MimiFAIR.bc_snow_rf; after = :aerosol_indirect_rf);\n",
+    "add_comp!(m, MimiFAIR.landuse_rf; after = :bc_snow_rf);\n",
+    "add_comp!(m, MimiFAIR.contrails_rf; after = :landuse_rf);\n",
+    "add_comp!(m, MimiFAIR.total_rf; after = :contrails_rf);\n",
+    "add_comp!(m, MimiFAIR.temperature; after = :total_rf);"
    ]
   },
   {
@@ -576,20 +560,9 @@
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Electron.Window(Application(Base.PipeEndpoint(RawFD(53) paused, 0 bytes waiting), Process(`\u001b[4m/Users/lisarennels/.julia/artifacts/3ba739a4ed073587d96415faecef10a5ccea63ba/Julia.app/Contents/MacOS/Julia\u001b[24m \u001b[4m/Users/lisarennels/.julia/packages/Electron/ILvWR/src/main.js\u001b[24m \u001b[4m/var/folders/1w/jm1h6fwj0t536vld2gxj7kzr0000gn/T/jlel-9b9b29d2deb511eb1d5aff9fefbabc00\u001b[24m \u001b[4m/var/folders/1w/jm1h6fwj0t536vld2gxj7kzr0000gn/T/jlel-sn-9b9b79dadeb511eb15d77db571017392\u001b[24m \u001b[4mVXek2G18giFo1CtUdUXGHM2NAsIB3vQu6W5tu9wvbA6quVOCz515TO0Aaxr2CPyxFp9O2OY8z3kQHoEI/TVJOvy5DpTkmq45grLuqqORQlj/67i5QDz6KzCKyQqG/1FDfNEqm4RZ5vhGSu2jk0uDTUsVFrD8NamvTPi4vcItqls=\u001b[24m`, ProcessRunning), [1 window]), 1, true, Channel{Any}(128))"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "explore(m)"
+    "# explore(m) # fails in VSCode-run notebook, uncomment if running these commands locally or in a browser!"
    ]
   },
   {
