--- a/MimiFUND-MimiFAIR162-Flat.ipynb
+++ b/MimiFUND-MimiFAIR162-Flat.ipynb
@@ -246,25 +246,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We will now import each of the individual FAIR components."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# import MimiFAIRv1_6_2 components \n",
-    "import MimiFAIRv1_6_2: ch4_cycle, n2o_cycle, other_ghg_cycles, co2_cycle, ch4_forcing, o3_forcing,\n",
-    "    n2o_forcing, other_ghg_forcing, other_ghg_cycles, co2_forcing, o3_depleting_substance_cycles, o3_depleting_substance_forcing, aerosol_direct_forcing, \n",
-    "    aerosol_indirect_forcing, bc_snow_forcing, landuse_forcing, contrails_forcing, total_forcing, temperature \n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### Add and Update Dimensions"
    ]
   },
@@ -398,24 +379,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "add_comp!(m, ch4_cycle; after = :emissions);\n",
-    "add_comp!(m, n2o_cycle; after = :ch4_cycle);\n",
-    "add_comp!(m, co2_cycle; after = :n2o_cycle);\n",
-    "add_comp!(m, other_ghg_cycles; after = :co2_cycle);\n",
-    "add_comp!(m, o3_depleting_substance_cycles; after = :other_ghg_cycles);\n",
-    "add_comp!(m, co2_forcing; after = :o3_depleting_substance_cycles);\n",
-    "add_comp!(m, ch4_forcing; after = :co2_forcing);\n",
-    "add_comp!(m, n2o_forcing; after = :ch4_forcing);\n",
-    "add_comp!(m, o3_forcing; after = :n2o_forcing);\n",
-    "add_comp!(m, aerosol_direct_forcing; after = :o3_forcing);\n",
-    "add_comp!(m, aerosol_indirect_forcing; after = :aerosol_direct_forcing);\n",
-    "add_comp!(m, other_ghg_forcing; after = :aerosol_indirect_forcing);\n",
-    "add_comp!(m, o3_depleting_substance_forcing; after = :other_ghg_forcing);\n",
-    "add_comp!(m, contrails_forcing; after = :o3_depleting_substance_forcing);\n",
-    "add_comp!(m, bc_snow_forcing; after = :contrails_forcing);\n",
-    "add_comp!(m, landuse_forcing; after = :bc_snow_forcing);\n",
-    "add_comp!(m, total_forcing; after = :landuse_forcing);\n",
-    "add_comp!(m, temperature; after = :total_forcing);"
+    "add_comp!(m, MimiFAIRv1_6_2.ch4_cycle; after = :emissions);\n",
+    "add_comp!(m, MimiFAIRv1_6_2.n2o_cycle; after = :ch4_cycle);\n",
+    "add_comp!(m, MimiFAIRv1_6_2.co2_cycle; after = :n2o_cycle);\n",
+    "add_comp!(m, MimiFAIRv1_6_2.other_ghg_cycles; after = :co2_cycle);\n",
+    "add_comp!(m, MimiFAIRv1_6_2.o3_depleting_substance_cycles; after = :other_ghg_cycles);\n",
+    "add_comp!(m, MimiFAIRv1_6_2.co2_forcing; after = :o3_depleting_substance_cycles);\n",
+    "add_comp!(m, MimiFAIRv1_6_2.ch4_forcing; after = :co2_forcing);\n",
+    "add_comp!(m, MimiFAIRv1_6_2.n2o_forcing; after = :ch4_forcing);\n",
+    "add_comp!(m, MimiFAIRv1_6_2.o3_forcing; after = :n2o_forcing);\n",
+    "add_comp!(m, MimiFAIRv1_6_2.aerosol_direct_forcing; after = :o3_forcing);\n",
+    "add_comp!(m, MimiFAIRv1_6_2.aerosol_indirect_forcing; after = :aerosol_direct_forcing);\n",
+    "add_comp!(m, MimiFAIRv1_6_2.other_ghg_forcing; after = :aerosol_indirect_forcing);\n",
+    "add_comp!(m, MimiFAIRv1_6_2.o3_depleting_substance_forcing; after = :other_ghg_forcing);\n",
+    "add_comp!(m, MimiFAIRv1_6_2.contrails_forcing; after = :o3_depleting_substance_forcing);\n",
+    "add_comp!(m, MimiFAIRv1_6_2.bc_snow_forcing; after = :contrails_forcing);\n",
+    "add_comp!(m, MimiFAIRv1_6_2.anduse_forcing; after = :bc_snow_forcing);\n",
+    "add_comp!(m, MimiFAIRv1_6_2.total_forcing; after = :landuse_forcing);\n",
+    "add_comp!(m, MimiFAIRv1_6_2.temperature; after = :total_forcing);"
    ]
   },
   {
@@ -429,15 +410,7 @@
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ssp585\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "update_MimiFAIR162_params!(m; start_year = FAIR_first, end_year = FAIR_last, ar6_scenario = ar6_scenario)"
    ]
@@ -512,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -533,6 +506,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "A note here is that FAIR v1.6.2 splits land use CO2 emissions and fossil CO2 emissions, and feeds their sum into the `co2_cycle`, but just the land use emissions into the `landuse_forcing` component in MimiFAIRv1_6_2. Given FUND does not explicilty provide the land use emissions (AFOLU), we do not modify the latter connection, and thus FAIR will run with its default land use emissions for the `landuse_forcing` component."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### FAIR Temperature --> FUND CO₂ Cycle, Biodiversity, Ocean and Regional Climate Components"
    ]
   },
@@ -545,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -560,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -587,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 17,
    "metadata": {
     "scrolled": false
    },
@@ -606,20 +586,9 @@
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Electron.Window(Application(Base.PipeEndpoint(RawFD(53) paused, 0 bytes waiting), Process(`\u001b[4m/Users/lisarennels/.julia/artifacts/3ba739a4ed073587d96415faecef10a5ccea63ba/Julia.app/Contents/MacOS/Julia\u001b[24m \u001b[4m/Users/lisarennels/.julia/packages/Electron/ILvWR/src/main.js\u001b[24m \u001b[4m/var/folders/1w/jm1h6fwj0t536vld2gxj7kzr0000gn/T/jlel-9b9b29d2deb511eb1d5aff9fefbabc00\u001b[24m \u001b[4m/var/folders/1w/jm1h6fwj0t536vld2gxj7kzr0000gn/T/jlel-sn-9b9b79dadeb511eb15d77db571017392\u001b[24m \u001b[4mVXek2G18giFo1CtUdUXGHM2NAsIB3vQu6W5tu9wvbA6quVOCz515TO0Aaxr2CPyxFp9O2OY8z3kQHoEI/TVJOvy5DpTkmq45grLuqqORQlj/67i5QDz6KzCKyQqG/1FDfNEqm4RZ5vhGSu2jk0uDTUsVFrD8NamvTPi4vcItqls=\u001b[24m`, ProcessRunning), [1 window]), 1, true, Channel{Any}(128))"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "explore(m)"
+    "# explore(m) # fails in VSCode-run notebook, uncomment if running these commands locally or in a browser!"
    ]
   },
   {
@@ -638,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -657,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -672,7 +641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -8985,7 +8954,7 @@
        ")"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -9020,7 +8989,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -9035,7 +9004,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -14593,7 +14562,7 @@
        ")"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -14632,7 +14601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -20190,7 +20159,7 @@
        ")"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -20225,7 +20194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -25783,7 +25752,7 @@
        ")"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -25813,7 +25782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -28058,7 +28027,7 @@
        ")"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -28078,7 +28047,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -28108,7 +28077,7 @@
        " 568659.7058490447"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
